  15 Jun 2019; Agostino Sarubbo <ago@gentoo.org> files/queuemetrics.initd:
  app-metrics/queuemetrics: Fix init script: --stdout and --stderr are only
  relevant with --start

  29 May 2019; Agostino Sarubbo <ago@gentoo.org> files/queuemetrics.confd:
  app-metrics/queuemetrics: prefer ipv4 over ipv6

  08 May 2019; Agostino Sarubbo <ago@gentoo.org> +files/25queuemetrics,
  queuemetrics-19.04.1.ebuild:
  app-metrics/queuemetrics: keep configuration files

*queuemetrics-19.04.1 (02 May 2019)

  02 May 2019; Agostino Sarubbo <ago@gentoo.org> +files/queuemetrics.confd,
  +files/queuemetrics.initd, +metadata.xml, +queuemetrics-19.04.1.ebuild:
  app-metrics/queuemetrics: First commit for queuemetrics/uniloader